--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -10,7 +10,8 @@
 </head>
 <body>
   <main style="margin: 1em;">
-    <h3>My URLs</h3>
+    <h3><%- include('partials/_header') %></h3>
+    <h3>My URLs</h3> 
     <table class="table">
       <thead>
         <tr>
