--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,4 +1,5 @@
 <header>
+  
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,5 +11,18 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <!--button for login-->
+    <% if (username === undefined){ %>
+    <form class="form-inline" action="/login" method="POST">
+      <label for="longURL"><%=username%></label>
+      <input class="form-control" type="text" name="username" placeholder="Username" style="width: 200px; margin: 1em">
+          <button type="submit">Login</button>
+      </form>
+    <% } else { %>
+      <form class="form-inline" action="/logout" method="POST">
+      <label style="margin: 1em" for="longURL">Logged In As: <%=username%></label>
+          <button type="submit">Logout</button>
+      </form
+   <% } %>
   </nav>
 </header>
