--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -6,22 +6,23 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
+      <div class="navbar-nav">  
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
     <!--button for login-->
-    <% if (username === undefined){ %>
+    <% if (userId === undefined){ %>
     <form class="form-inline" action="/login" method="POST">
-      <label for="longURL"><%=username%></label>
-      <input class="form-control" type="text" name="username" placeholder="Username" style="width: 200px; margin: 1em">
-          <button type="submit">Login</button>
+      <div class="navbar-nav">
+          <a class="nav-item nav-link" href="/urls/register">Register</a>
+          <a class="nav-item nav-link" href="/urls/login">Login</a>     
+        </div>
       </form>
     <% } else { %>
       <form class="form-inline" action="/logout" method="POST">
-      <label style="margin: 1em" for="longURL">Logged In As: <%=username%></label>
-          <button type="submit">Logout</button>
+        <label style="margin: 1em" for="longURL">Logged In As: <%=users[userId].email%></label> 
+      <button type="submit">Logout</button>
       </form
    <% } %>
   </nav>
