--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -15,17 +15,17 @@
     <%- include('partials/_header') %>
 
     <main style="margin: 1em;">
-     
-      <form class="form-inline" action="/login" method="POST">
-        <div class="form-group mb-1">
-          <label for="longURL">Username:</label>
-          <input class="form-control" type="email" name="email"  style="width: 300px; margin-left: 1em; margin-right: 3em">
+      <h1>Login </h1>
+      <form action="/login" method="POST">
+        <div class="form-group mb-3">
+          <label for="email">Email address:</label>
+          <input class="form-control" type="email" name="email"  style="width: 300px;  margin-right: 1em" placeholder="Enter email">
          
         </div>
       
-          <div class="form-group mb-1">
-            <label for="longURL">Password:</label>
-          <input class="form-control" type="password" name="password" style="width: 300px; margin-left: 1em; margin-right: 3em">
+          <div class="form-group mb-3">
+            <label for="password">Password:</label>
+          <input class="form-control" type="password" name="password" style="width: 300px;  margin-right: 1em" placeholder="Password">
           <button type="submit" class="btn btn-primary">Login</button>
         </div>
       </form>
