--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -15,17 +15,17 @@
     <%- include('partials/_header') %>
 
     <main style="margin: 1em;">
-     
-      <form class="form-inline" action="/register" method="POST">
+     <h1>Register </h1>
+      <form  action="/register" method="POST">
         <div class="form-group mb-1">
-          <label for="longURL">Email:</label>
-          <input class="form-control" type="email" name="email"  style="width: 300px; margin-left: 1em; margin-right: 3em">
+          <label for="email">Email address:</label>
+          <input class="form-control" type="email" name="email"  placeholder="Enter email" style="width: 300px; margin-right: 3em">
          
         </div>
       
           <div class="form-group mb-1">
-            <label for="longURL">Password:</label>
-          <input class="form-control" type="password" name="password" style="width: 300px; margin-left: 1em; margin-right: 3em">
+            <label for="password">Password:</label>
+          <input class="form-control" type="password" name="password" placeholder="Password" style="width: 300px; margin-right: 1em">
           <button type="submit" class="btn btn-primary">Register</button>
         </div>
       </form>
