--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -12,6 +12,9 @@
   <%- include('partials/_header') %>
   <main style="margin: 1em;">
     <h3>My URLs</h3> 
+    <% if (userId === undefined){ %>
+      <h3>You cannot see URLs until you register or log in</h3>
+    <% } else { %>
     <table class="table">
       <thead>
         <tr>
@@ -26,8 +29,7 @@
         <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
-            <td><%= urls[url] %></td>
-           <!-- <td><a href="/urls/<%= url %>"><%= urls[url] %></a></td> -->
+            <td><%= urls[url].longURL %></td>
             <td>
               <form method="GET" action= <%= `/urls/${url}` %> >
                 <button type="submit" class="btn btn-primary">Edit</button>
@@ -42,6 +44,7 @@
         <% } %>
       </tbody>
     </table>
+  <% } %>
   </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
