--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -19,14 +19,12 @@
       <form action="/login" method="POST">
         <div class="form-group mb-3">
           <label for="email">Email address:</label>
-          <input class="form-control" type="email" name="email"  style="width: 300px;  margin-right: 1em" placeholder="Enter email">
-         
-        </div>
-      
-          <div class="form-group mb-3">
-            <label for="password">Password:</label>
-          <input class="form-control" type="password" name="password" style="width: 300px;  margin-right: 1em" placeholder="Password">
-          <button type="submit" class="btn btn-primary">Login</button>
+          <input class="form-control" type="email" name="email"  style="width: 300px;  margin-right: 1em" placeholder="Enter email">      
+        </div>     
+         <div class="form-group mb-3">
+          <label for="password">Password:</label>
+             <input class="form-control" type="password" name="password" style="width: 300px;  margin-right: 1em" placeholder="Password">
+            <button style="margin-left: 14.5em; margin-top: 1em" type="submit" class="btn btn-primary">Login</button>
         </div>
       </form>
     </main>
