--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -19,14 +19,12 @@
       <form  action="/register" method="POST">
         <div class="form-group mb-1">
           <label for="email">Email address:</label>
-          <input class="form-control" type="email" name="email"  placeholder="Enter email" style="width: 300px; margin-right: 3em">
-         
-        </div>
-      
-          <div class="form-group mb-1">
+          <input class="form-control" type="email" name="email"  placeholder="Enter email" style="width: 300px; margin-right: 3em">      
+        </div>      
+         <div class="form-group mb-1">
             <label for="password">Password:</label>
-          <input class="form-control" type="password" name="password" placeholder="Password" style="width: 300px; margin-right: 1em">
-          <button type="submit" class="btn btn-primary">Register</button>
+              <input class="form-control" type="password" name="password" placeholder="Password" style="width: 300px; margin-right: 1em">
+          <button style="margin-left: 13.4em; margin-top: 1em" type="submit" class="btn btn-primary">Register</button>
         </div>
       </form>
     </main>
